manifests/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-service
          port: 22

---

# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: forgejo-route
# spec:
#   entryPoints:
#   - websecure
#   - web
#   routes:
#   - kind: Rule
#     match: Host(`git.alexbissessur.dev`)
#     services:
#     - name: forgejo-service
#       port: 80
#   tls:
#     certResolver: le


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - git.alexbissessur.dev
    secretName: forgejo-tls
  rules:
  - host: git.alexbissessur.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-service
            port:
              number: 80
